# InverseKinematicsWithML

./: .gitignore  README.md  convert_rosbag_to_csv.py  data_analysis.ipynb  data_generator.py  model_development.ipynb  position_data.ipynb  pytorch_model.py  virtual_position_data.ipynb
notebooks/: data_analysis.ipynb  model_validation.ipynb  pytorch_performance_analysis.ipynb  task_space_visualization.ipynb  train_pytorch_model.ipynb
scripts/: convert_rosbag_to_csv.py  convert_to_csv.bash  record.bash
src/arm_controller_msgs/: CMakeLists.txt  package.xml
src/arm_controller_msgs/msg/: Configuration.msg
src/data_generator/: package.xml  setup.py
src/data_generator/data_generator/: data_generator.py
src/data_generator/launch/: data_generator.launch.py
src/ik_with_pytorch/: package.xml  setup.cfg  setup.py
src/ik_with_pytorch/ik_with_pytorch/: px100_controller.py
src/ik_with_pytorch/launch/: px100_controller.launch.py
src/ik_with_scikit_learn/: package.xml  setup.cfg  setup.py
src/px100_controller/: package.xml  setup.cfg  setup.py
src/px100_controller/launch/: data_generator.launch.py  px100_controller.launch.py  pytorch_controller.launch.py
src/px100_controller/px100_controller/: data_generator.py  px100_controller_analytical_ik.py.  px100_controller_ml.py  px100_controller_rbt.py  px100_dt_controller.py
