<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px100_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="">xavier</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>interbotix_moveit_interface</depend>
  <depend>interbotix_moveit_interface_msgs</depend>
  <depend>interbotix_xs_msgs</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xsarm_sim</depend>
  <depend>interbotix_xsarm_descriptions</depend>
  <depend>interbotix_xsarm_ros_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
